# maestro

./: .gitignore  Cargo.toml  README.md  example.config.toml  readme.md
.github/workflows/: release.yml  test.yml
src/: args.rs  config.rs  http.rs  main.rs
