[package]
name = "maestro"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.11", features = ["blocking", "cookies"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7.2"
serde = "1.0.136"
serde_derive = "1.0.136"
clap = { version = "4.1.6", features = ["derive"] }
